1.6.1
Update for 1.1.4
Add ingame Spanish translations
Improve instructions
Increase all blocks explosion resistance
Change all block IDs

1.6.0
Update for 1.0.9
Add Super Emerald Tools
Add Emerald Battle Axe
Add Emerald Spear
Change all items IDs
Tweak all items attack damage
Update Translations
Remove Emerald Slab

1.5.7
Update for 1.0.7
Add support for devices with bigger aspect ratio
Increase the resistance of all tools
Tools will now get better enchants
Remove the Armor until it is fixed

1.5.6
Support for 1.0.4
Add Emerald Mushroom
Fix Armor Texture

1.5.5
Add Emerald Armor
Support for 1.0.3

1.5.4
Add Block Recipes
Fix crash on some devices
Super Emerald Sword can't be recycled anymore

1.5.3
Update the mod for MCPE 1.0.2
Add Blocks back
Add Emerald Nugget: you can get it smelting emerald tools
Change Emerald Stick Recipe
Remove Emerald Dust

1.5.2
Add the Recipes back
Updated Korean translations(Thanks to Johnmacrocraft)
Remive the blocks because they are causing crashes on some devices

1.5.1
Add chinese translations (Thanks to [Twitter]@model_part)
Fix Item and Block Names
Fix some problems with the Emerald Tools
Remove Emerald Mod version from main screen, becuase it was causing lag 

1.5.0
Update for MCPE 1.0
New app icon
Add Emerald Fence
Change Emerald Rod to Emerald Stick
Improve Emerald Shovel, Pickaxe and Pax code

1.4.5
New: added back support for x86 devices
Improved: optimised code
Improved: Emerald Bow
Improved: updated portughese translations
Improved support with other mods
Fixed: Emerald Slab Recipe
Fixed crash when opening crafting table
Fixed Emerald Bow crashes in most cases
Fixed some other crashes
Removed: Emerald Apple(will be probaly added back in 1.5)
Removed: Emerald Beef

1.4.4
Improved:
-improved a lot Emerald Slabs
Fixed:
-crash when opening the app
-Emerald Slab

1.4.3
New:
-added Emerald Bow(is not ready)
-support for 0.14.2
Changed/Improved:
-Emerald Pickaxe and Shovel code
-Flint and Emerald now works like Flint and Steel