@@ -3,5 +3,4 @@
 /libs
 /obj
 /blac
-/apk
 /.vscode
