@@ -28,4 +28,4 @@ item.emerald_spear.name=Smaragdspeer
 item.emerald_stick.name=Smaragdrute
 item.emerald_nugget.name=Smaragdnugget
 item.emerald_battle_axe.name=Smaragdstreitaxt
-
+item.emerald_apple.name=Smaragdapfel
