@@ -29,4 +29,5 @@ item.emerald_spear.name=Emerald Spear
 item.emerald_stick.name=Emerald Stick
 item.emerald_nugget.name=Emerald Nugget
 item.emerald_battle_axe.name=Emerald Battle Axe
+item.emerald_apple.name=Emerald Apple
 
