@@ -1,6 +1,6 @@
-APP_ABI := armeabi-v7a x86
+APP_ABI := armeabi-v7a #x86
 APP_PLATFORM := android-14
-APP_CFLAGS := -O2 -std=gnu99
+APP_CFLAGS := -O2 -std=c++11
 APP_CPPFLAGS += -std=c++11 -fexceptions
 APP_STL := gnustl_static
 
