@@ -1,0 +1,9 @@
+#pragma once
+
+#include "minecraftpe/world/item/Item.h"
+
+class AppleItem : public Item
+{
+public:
+    AppleItem(const std::string &name, short id);
+};
