@@ -34,8 +34,4 @@ public:
 	void addDirectShapedRecipe(std::unique_ptr<ShapedRecipe>);
 	void addDirectShapelessRecipe(std::unique_ptr<ShapelessRecipe>);
 	void addRepairItemRecipe(std::unique_ptr<RepairItemRecipe>);
-
-	static std::vector<std::string> Shape(const std::string&);
-	static std::vector<std::string> Shape(const std::string&, const std::string&);
-	static std::vector<std::string> Shape(const std::string&, const std::string&, const std::string&);
 };
