@@ -1,6 +1,7 @@
 1.6.1
 Update for 1.1.4
 Add ingame Spanish translations
+Add the Emerald Apple back
 Improve instructions
 Increase all blocks explosion resistance
 Change all block IDs
